flask-app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels: # Add labels to improve service discovery
    app: flask-app
spec:
  replicas: 2  # Number of pod replicas
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: 295863487981.dkr.ecr.eu-central-1.amazonaws.com/microservices/flask-app:latest
        ports:
        - containerPort: 5000  # Ensure Flask is running on this port
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: LoadBalancer  # Expose externally
  ports:
  - port: 80  # External port for accessing the service
    targetPort: 5000  # Internal container port where Flask is running
    protocol: TCP
  selector:
    app: flask-app  # Connects the service to the pod via label selector
